# JK-Boilerplate

./: .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml
app/: main.py
app/core/: app.py  batch.py  data_processor.py  jaupbitts.py  my-cool-bot.py  test-app.py  upbit-trader.py  upbit_trader.py
app/utils/: app.py  batch.py  config.py  logger.py  supabase.py  telegram.py
docs/: framework_guide.md  multi_project_setup.md
scripts/: README.md  create_app.py  create_app.sh  create_batch.sh  update_main.py
tests/: test_basic.py
