[project]
name = "jk-boilerplate"
version = "0.1.0"
description = "General purpose application framework template"
authors = [
    {name = "jklee", email = "taein2301@gmail.com"},
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "supabase>=2.0.0",
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
app = "app.main:app_entry"
batch = "app.main:batch_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]  # Enable pycodestyle, Pyflakes, and isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
